project details reworked

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   /* Light theme colors */
   --color-bg: #cdc9c3;
   --color-text-dark: #2c3858;
-  --color-text-soft: #947969;
+  --color-text-soft: #705b4f;
   --color-accent-1: #cf9269;
   --color-accent-2: #cd5756;
 }
